--- a/index.html
+++ b/index.html
@@ -13,9 +13,20 @@
     <!-- Title -->
     <div id="header" class="container">
       <h1>Welcome to the Meme-Generator</h1>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-      </p>
+      <div class="directions">
+        <p>
+          <span>DIRECTIONS:</span> 
+          <ol>
+            <li>Either cut and paste or type in the URL</li>
+            <li>Add any text you want to top, bottom or both</li>
+            <li>Pick your font size (10px-50px)</li>
+            <li> Pick your font color</li>
+            <li>Generate the meme</li>
+          </ol>
+          <br>
+          If you do not like what you made you can delete and start over.  You may create as many as you like.
+        </p>
+      </div>
     </div>
     <!-- End Title -->
 
